--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
     <link rel="stylesheet" href="style.css">
 
     <!-- Scripts -->
+    <script defer src="library.js"></script>
     <script defer src="script.js"></script>
 
 </head>
 <body>
     
-    <h1>My Boilerplate</h1>
+    <h1 id="text">My Boilerplateasfasfsafasfsfsf</h1>
 
 </body>
 </html>
